--- a/01_textView/app/src/main/res/values/strings.xml
+++ b/01_textView/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">textView</string>
+    <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="welcome">Welcome to KOREA!!!</string>
+    <string name="android">Start! Android Programming!</string>
 </resources>
