--- a/05_linearLayout/app/src/main/res/values/strings.xml
+++ b/05_linearLayout/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">linearLayout</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="welcome">Welcome to KOREA!!!</string>
+    <string name="start">Start! Android Programming!</string>
 </resources>
